--- a/HW1/code/HW1.html
+++ b/HW1/code/HW1.html
@@ -1486,6 +1486,12 @@ border-radius: 0px;
 </div>
 
 
+<blockquote>
+<ul>
+<li><a href="../../HW2/code/HW2.html">HW2.html</a></li>
+<li><a href="../../HW1/code/Homework1.html">Homework1.html</a></li>
+</ul>
+</blockquote>
 <div id="homework-2021-tongji" class="section level1" number="1">
 <h1><span class="header-section-number">1</span> Homework 2021
 Tongji</h1>
